// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessRegistrationsTable should handle resign dropdown action 1`] = `
<DocumentFragment>
  <h2
    class="mb-8 font-bold"
  >
    Entity table
  </h2>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top ml-25"
            >
              <div>
                Address
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Entity name
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                History
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Website
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                MSQ
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center no-border"
            >
              <div>
                Repository
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top hidden"
            >
              <div>
                Actions
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          class="sc-AxhCb jCOJxD group"
          data-testid="TableRow"
        >
          <td>
            <div
              class="sc-AxiKw ekuVpr space-x-4"
            >
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="sc-AxheI etPkdG border-theme-neutral-800"
                >
                  <div
                    class="sc-AxjAm jmgDQY"
                    height="22"
                    width="22"
                  >
                    <svg>
                      business.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                </div>
              </div>
              <div
                class="inline-flex items-center"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  ARK Wallet 1
                </span>
                <span
                  class="sc-AxhUy kMyssT text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr … YUYD
                </span>
              </div>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp font-semibold"
            >
              <span>
                business2reg
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp font-semibold justify-center text-theme-primary"
            >
              <span>
                View
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp justify-center text-theme-neutral-light"
            >
              <div
                class="sc-AxjAm cpczEI text-center"
                height="1em"
                width="1em"
              >
                <svg>
                  redirect.svg
                </svg>
              </div>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp font-semibold justify-center text-theme-primary"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp font-semibold justify-center text-theme-primary"
            >
              <span>
                View
              </span>
            </div>
          </td>
          <td
            class="w-22"
          >
            <div
              class="sc-AxiKw gCtQxH justify-end"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="sc-AxgMl doDOag"
                  color="primary"
                  type="button"
                >
                  <div
                    class="sc-AxjAm buCJuk"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`BusinessRegistrationsTable should render empty state 1`] = `
<DocumentFragment>
  <h2
    class="mb-8 font-bold"
  >
    Entity table
  </h2>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top ml-25"
            >
              <div>
                Address
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Entity name
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                History
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Website
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                MSQ
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center no-border"
            >
              <div>
                Repository
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top hidden"
            >
              <div>
                Actions
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      />
    </table>
  </div>
</DocumentFragment>
`;

exports[`BusinessRegistrationsTable should render registrations 1`] = `
<DocumentFragment>
  <h2
    class="mb-8 font-bold"
  >
    Entity table
  </h2>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top ml-25"
            >
              <div>
                Address
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Entity name
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                History
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Website
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                MSQ
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center no-border"
            >
              <div>
                Repository
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top hidden"
            >
              <div>
                Actions
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          class="sc-AxhCb jCOJxD group"
          data-testid="TableRow"
        >
          <td>
            <div
              class="sc-AxiKw ekuVpr space-x-4"
            >
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="sc-AxheI etPkdG border-theme-neutral-800"
                >
                  <div
                    class="sc-AxjAm jmgDQY"
                    height="22"
                    width="22"
                  >
                    <svg>
                      business.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                </div>
              </div>
              <div
                class="inline-flex items-center"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  ARK Wallet 1
                </span>
                <span
                  class="sc-AxhUy kMyssT text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr … YUYD
                </span>
              </div>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp font-semibold"
            >
              <span>
                business2reg
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp font-semibold justify-center text-theme-primary"
            >
              <span>
                View
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp justify-center text-theme-neutral-light"
            >
              <div
                class="sc-AxjAm cpczEI text-center"
                height="1em"
                width="1em"
              >
                <svg>
                  redirect.svg
                </svg>
              </div>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp font-semibold justify-center text-theme-primary"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw jHcrVp font-semibold justify-center text-theme-primary"
            >
              <span>
                View
              </span>
            </div>
          </td>
          <td
            class="w-22"
          >
            <div
              class="sc-AxiKw gCtQxH justify-end"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="sc-AxgMl doDOag"
                  color="primary"
                  type="button"
                >
                  <div
                    class="sc-AxjAm buCJuk"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
